<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Condomizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_user">Usuario</string>
    <string name="input_psswd">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="conv_name">Nombre</string>
    <string name="conv_dir">Dirección</string>
    <string name="conv_date">Fecha</string>
    <string name="conv_place">Lugar</string>
    <string name="conv_orden">Orden del día</string>
    <string name="conv_time">Hora</string>
    <string name="conv_crear">Crear</string>

	
</resources>
