<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/fondo_1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.biospolivoto.condomizer.MainActivity$PlaceholderFragment" >

        <TextView
            android:id="@+id/input_usr_label"
            style="@style/margen_lr_20"
            android:layout_alignParentTop="true"
            android:text="@string/input_user" />

        <EditText
            android:id="@+id/input_usr"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_usr_label"
            android:layout_marginTop="20sp"
            android:inputType="text" />

        <TextView
            android:id="@+id/input_psswd_label"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_usr"
            android:layout_marginTop="20sp"
            android:text="@string/input_psswd" />

        <EditText
            android:id="@+id/input_psswd"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_psswd_label"
            android:layout_marginTop="20sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/logIn"
            style="@style/margen_lr_20"
            android:layout_below="@+id/input_psswd"
            android:layout_marginTop="12sp"
            android:text="@string/login" />
    </RelativeLayout>

</ScrollView>